core.h


typedef struct Entity { hp_Handle id; } Entity;


//IMAGES

typedef struct Texture {
    sg_image image;
    sg_view view;
} Texture;

typedef struct Mesh {
    sg_buffer vbufs[MESH_MAX_VBUFS];
    sg_buffer ibuf;
    int first_element;
    int element_count;
} Mesh;



typedef struct Bounds {
    float min[3], max[3];
    float radius_xy, radius;
} Bounds;


typedef struct Model{
    Bounds bounds;
    Mesh meshes[4];
    int meshes_count;
} Model;